# ChangeLog for dev-python/pyelftools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyelftools/ChangeLog,v 1.19 2014/06/04 22:06:49 vapier Exp $

*pyelftools-0.22 (04 Jun 2014)

  04 Jun 2014; Mike Frysinger <vapier@gentoo.org>
  +files/pyelftools-0.22-dyntable.patch,
  +files/pyelftools-0.22-grace-string-dyn.patch, +pyelftools-0.22.ebuild:
  Version bump #512214 by Ian Delaney.

  11 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> pyelftools-0.21-r4.ebuild:
  Keyword amd64-linux and x86-linux

  19 Jan 2014; Mike Frysinger <vapier@gentoo.org> pyelftools-0.21-r4.ebuild:
  Add arm64 love.

  25 Dec 2013; Patrick Lauer <patrick@gentoo.org> pyelftools-0.21-r4.ebuild:
  Remove bogus stable keyword

  23 Dec 2013; Mike Frysinger <vapier@gentoo.org> pyelftools-0.21-r4.ebuild:
  Stabilize for all #488682.

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> pyelftools-0.21-r4.ebuild:
  x86 stable, bug #488682

  27 Nov 2013; Markus Meier <maekke@gentoo.org> pyelftools-0.21-r4.ebuild:
  arm stable, bug #488682

  09 Nov 2013; Pacho Ramos <pacho@gentoo.org> pyelftools-0.21-r4.ebuild:
  amd64 stable, bug #488682

  17 Oct 2013; Jeroen Roovers <jer@gentoo.org> pyelftools-0.21-r4.ebuild:
  Stable for HPPA (bug #487676).

*pyelftools-0.21-r4 (30 Sep 2013)

  30 Sep 2013; Mike Frysinger <vapier@gentoo.org> +pyelftools-0.21-r4.ebuild,
  -pyelftools-0.21-r3.ebuild:
  Re-add dyntable patch accidentally dropped in distutils-r1 conversion
  #472500#5 by Arfrever Frehtes Taifersar Arahesis.

*pyelftools-0.21-r3 (28 Sep 2013)

  28 Sep 2013; Mike Frysinger <vapier@gentoo.org> +pyelftools-0.21-r3.ebuild:
  Re-add Michał Górny's distutils-r1 now that the eclass supports EAPI=4 #472500
  by Blu3.

*pyelftools-0.21-r2 (24 Apr 2013)

  24 Apr 2013; Mike Frysinger <vapier@gentoo.org> -pyelftools-0.20.ebuild,
  -pyelftools-0.20-r1.ebuild, -pyelftools-0.20-r2.ebuild,
  -files/pyelftools-0.20-dyntags-1.patch,