@@ -6,25 +6,18 @@ AUX pyelftools-0.22-dyntable.patch 5784 SHA256 3ff651c1f1ffed8cb664dfc9c14dfa71a
 AUX pyelftools-0.22-grace-string-dyn.patch 2504 SHA256 44ec0f49706995eee1b4ee3064e419fa75f01928617d6aca532e149df8c6d33e SHA512 2073ea71e322faf20720e1f06e5f0394ef1b96bab27fe3f586436d9e3147ff8a79b8614a4035c1afcd79f5fe7efe3bea9eeec7a7449e0d170be3b7e8cd56bac0 WHIRLPOOL 062806093688f189dbaac9f458071f4a1816095a395f82be0942d76ec490f1f1ed7407c91025652a18f15645876c6261132a354c87ded98a2ef1f8a012ce5a47
 DIST pyelftools-0.21.tar.gz 283250 SHA256 a9a10d894c698ab3a2d909c3df1c3d88d0ab03811351c278b3f520204f33d834 SHA512 adddfe10756a26d694bb4a048104b04958337dc7a1ab023e4bb50b7fbf5d66fc5b6c4a077699757adb26bd6ffd8885a1908f3daae3d0acd65a704a11499308d3 WHIRLPOOL 1607c311e7b3ec463afe53b239f84f7b47878a613365c2f8809a15df4e5096d7d702a8dcbc91c357b3d5f28297106abaa16540842ad09a4dc2bdd1a648589389
 DIST pyelftools-0.22.tar.gz 395525 SHA256 9f7dd617b8a577a3834e7dd7f34f49df21c0670e67a48b21add19abe1adffb60 SHA512 10a84d9d0e28cb609f252990fbc05747e0840c5efeeb6890e13076aa2d59780c7d1a5bd6036dee6f8b252a984796a3834183ccab1c1988473bc69646fe56867b WHIRLPOOL eac57cef3f4159deac907394995655e227aa1d034a3b4ec54728531d08ef1b4f8edee33d971a3423b32d08efba621496bb5e778ba090bc264db6d006da4f8842
-EBUILD pyelftools-0.21-r2.ebuild 1043 SHA256 735876032ae028e8453b72e22f21c9c82d981b4f1591ebd17199ccf94a6c05c0 SHA512 c7bd85f0c328b84358e0cffbc0d2a8763e6505c8dc91c01185f230fa2f16bcc780d989b1f98b52e45eb668f0fbab354efa634195a689f6ae9fab953cc14c3b02 WHIRLPOOL 9a0766d65b55997b64b1e2c163f153ac08c16625fe3bb80d97f0c19af7ce4c155d2a41a5e1f4d41af50b1bf6d7df190b1c79a9de21568b256117d4f3a2cbd291
-EBUILD pyelftools-0.21-r4.ebuild 1013 SHA256 e858611579b6fc55236f2490361dcb8e08370a6423dac2ff3684b930ba5dffe5 SHA512 122574e95c6f5df43a5d4df28d0dfd97c2d27d8c4e364bb17c3449d82b3690e963bb905e5f3540baafca7a55d84a89e0dea4e2a6054a789d8fa954cc520a3703 WHIRLPOOL b9d66f5fd3923e81413e9ba05d600968dc31df329a88830912e8c814a353ad662b72f607c5f94f18b4bbbd4889252c2d82f0e46d6dcfa22c03a8cd842bce73db
-EBUILD pyelftools-0.22.ebuild 1165 SHA256 97c4f383f49be186bded8412890b0a96d9e2fd80c39ef492568da355ace28fc2 SHA512 5517f1e47e66c5ed04935ac89f0bf78c12211f0ccbdf87207d062a905d28284733b515f56a724ba5a704c24bebacfff4af0562f3939e46b9cbcbc269a3b7e24e WHIRLPOOL 34333f18ac850f79c1205502e57e4459db6952144f871db73014af989930fb79e9875e1ec2324cbec7f8189112967189ef40c688abc3445a4b7a3730701e728b
-MISC ChangeLog 3079 SHA256 c93b29efc31adf67add01f725a70d94c39bf91a7f1aad268be096d286ab55dda SHA512 e5f77b91e8a9b93e1b659edb086af58c3a84fbef4f540f51df812edfd298c1ac9c11a2649cee9c8abe5d2dd57f368a136e153886da7d9aa825ff5c1d4df19690 WHIRLPOOL b09ca4d5f9f08983af791392b39ee04838163817d65ffad18902cf7fd907d5d93dbc3d3ad08e3d2a6e90fc92bf6904332b0cfc72ef639a7f6d1521042f244f35
+EBUILD pyelftools-0.21-r4.ebuild 1012 SHA256 104c972446c1a43340ae134020c30c86cfe74b49d3f49f793a7fb74a075a9636 SHA512 e1558df8b39b5b5c39983bcd42293f8abf6dcb68076626920fe726d444bfecb36b6013b2de0e1b8463e92327534eed7e0aae35c119f815a35ddd3a5568416756 WHIRLPOOL 3bc2b1c50bff2e4b1a031a2391b3468675152545662c8514c29f8a0888dd6dff1894c23baeb06e75c9330573e621caac939fc606d3b8942fdda019ef797330b4
+EBUILD pyelftools-0.22.ebuild 1165 SHA256 5e12c9d82632111f72bb51e13aad2fd07fe52961ed60d33f510f3381ec7c924c SHA512 4d4c73d796cddf92015c3b20fefd2e5831828fee5bf2f493b4269ad73ba5c1982202e175da5d88695a2431604333a1128e171926bc76a18a312833c47d3e4d3d WHIRLPOOL 144f15fab45b24ecc151a353e60b2957dac5a9c05a8eaaec9890fd7f39df593aa1816d3fd06854fa2abad8630fc13b4c91b737c9a795789f7ab98d9a5c0750a3
+MISC ChangeLog 3269 SHA256 92a1f5820db3e6b3e717b0f228dab90caf1245f46c24601fc70e79fb79f133a2 SHA512 5ae162ae1c6b119928ef30c1153b0746bb75d861940008b55baa13ff5bf8272e429e96c2497a9f8feddfed75a188341524ee59f0d222604bafd07a4b8e0e6f4d WHIRLPOOL 81cda95a330e87e4c7a7ffff6111ef77538661dd60ad8b8c33493cf89280fca1a889e5a3daa8654f01ff193c346e1a82537fc2c03bfdd4aa6c06ed79d6029d1f
 MISC metadata.xml 357 SHA256 36e461539c964ebec0bd0dc4e2d8b0552ed93aa6afef96f6234fcc853e5c99fa SHA512 0f9207c57036d8f5a5b58aab9fd7ebd8993a061951d88d95163e9e6572ade8ce84868528b0e547611fa1baaea7cb6e83f0bdfeac9047897c6fb1f2201822b845 WHIRLPOOL 4093a70fd9afe0a2323a0eba34c0b6fb38f12d2f0cd2e30e6a2c0ddc54c504f3e4ccf38a0ffac5809aa19a6a696f868b163bbcf5f8a674e74fa6bc32540a888d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTj5h/AAoJEPGu1DbS6WIAoW4P/3m7PDG+Je7srSnHFJ2PT/sC
-h/JeK7mzMo7zo284gaxBUxGn28WoN4v1/pEVsQQlxotjMrss3himaXyHS+UxYGqp
-YyTROVjavlg60D++9E1t0t1HcCV7httHTGgIsS0gmrQBwMQ2+l+fqEzLuI27UsFE
-JR8hGNh1GTA6Ml9IHxBrNP/Un0G5m0mR+ZtPq+O8oVamjQa0GaCS8OJrJc9Yn2w4
-OyYcqbU8GZUck3ZTTZ2G3WqSm/XnNd1LsRfibog0utQJzR4R1++a30yWM3TXx7cl
-cb2LHId71W3Z8Pj7cAmIrQZc/L/n2AiU2hLIa9z3e1pRigh/qRt43gxLggfgFOWm
-DUbwKW6XnMJBXyHl311AHI6AYE+Iyuw4sroLmLxtmFnh2u1qIpcRrRuR1HzPGZWg
-yRLbV+mBApij708kCpmhjG4pedQKeHP2COE6GdnAOvA4856jZXp0tQu42A/f8X6+
-hCeAGMvUCao0M1ZsDhGger1913Dap0Q+w574q3srOmOd5E8Muys6wPx8jnG3wcIS
-wt/pmQypcD2jrHOPriXvp1SuUtMEgnZGrZ0IUMhesyEDgg0616WMqVQhaZiL2dUE
-nWIc24PgDRWHOFN3MR2Kxy+JdAGMazVqN6esFvbfV9JIpNEplaGKutavshiUPfGk
-+hSEEKEgoQDvO09WE9WB
-=of6y
+iQEcBAEBCAAGBQJUOsCkAAoJEEqz6FtPBkyj1KUH/jH5TYEKsaH/alI3Gaf5/xOl
+sgij48y5gKCuiB1kbAldG9xJ27BF90DCVhgpHkO96Ee7UeNnoyuRf4Dx8rHxCw+l
+H0yQxGy4csXKnazL1Xd1e8EEE+vDeFVk413XCaaLUDcYIiHEFghm+DBilqnTTCgi
+6T2muHWmYe4LZgsvpC9Suy0JSR0BRt49cdWYK3mdV3QHBOVPdpWWVgox5F3NIY5h
+Qb6ueARjEIN+H4O1J4Pqb1/+ClHb4/DUJMeNp56LTAwnIGnFDnbr5wGRtfIHpUOv
+zAn6b2XWskna7IHC6PATpuu1UXka8qS9HEri0Q0n9oO2yXUkWS2zw2v1WWtMx3c=
+=Agq8
 -----END PGP SIGNATURE-----
