@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyelftools/pyelftools-0.22.ebuild,v 1.1 2014/06/04 22:06:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyelftools/pyelftools-0.22.ebuild,v 1.2 2014/10/12 17:55:25 radhermit Exp $
 
 EAPI="4"
 
@@ -8,7 +8,7 @@ PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} )
 inherit distutils-r1
 
 DESCRIPTION="pure-Python library for parsing and analyzing ELF files and DWARF debugging information"
-HOMEPAGE="http://pypi.python.org/pypi/pyelftools https://bitbucket.org/eliben/pyelftools"
+HOMEPAGE="http://pypi.python.org/pypi/pyelftools https://github.com/eliben/pyelftools"
 SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="public-domain"
